UserHasRole
Implementado la entidad interlacionada entre user y role